# gtest-gbench-example

./: CMakeLists.txt  README.md  main.cpp
factoriallib/: CMakeLists.txt  falgo.cpp  falgo.h
factoriallib_benchmarks/: CMakeLists.txt  falgo_benchmark.cpp
factoriallib_tests/: CMakeLists.txt  falgo_test.cpp
